--- a/femcoservice/Views/Shared/_Layout.cshtml
+++ b/femcoservice/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year - By Femco</p>
         </footer>
     </div>
 
