--- a/femcoservice/Views/Productos/Create.cshtml
+++ b/femcoservice/Views/Productos/Create.cshtml
@@ -16,10 +16,11 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ImagenFile, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+                <span class="btn btn-default btn-file">
+                    @Html.TextBoxFor(modelo => modelo.ImagenFile, new { type = "file" })
+                </span>
             </div>
         </div>
 
@@ -40,11 +41,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ImagenFile, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UltimaCompra, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <span class="btn btn-default btn-file">
-                    @Html.TextBoxFor(modelo => modelo.ImagenFile, new { type = "file" })
-                </span>
+                @Html.EditorFor(model => model.UltimaCompra, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.UltimaCompra, "", new { @class = "text-danger" })
             </div>
         </div>
 
