--- a/femcoservice/Views/Productos/Details.cshtml
+++ b/femcoservice/Views/Productos/Details.cshtml
@@ -62,5 +62,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.producId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index",new { },new {@class= "btn btn-success" })
 </p>
