--- a/femcoservice/Views/Productos/Edit.cshtml
+++ b/femcoservice/Views/Productos/Edit.cshtml
@@ -70,6 +70,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
+                @Html.ActionLink("Back to List", "Index",new { },new { @class = "btn btn-success" } )
             </div>
         </div>
     </div>
