--- a/femcoservice/Views/Productos/Index.cshtml
+++ b/femcoservice/Views/Productos/Index.cshtml
@@ -7,9 +7,10 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+   <a class="btn btn-primary" href="/Productos/Create">Create New<span class="glyphicon-plus"></span></a>
+     @*@Html.ActionLink("Create New", "Create",new { }, new { @class = "btn btn-primary" })*@
 </p>
-<table class="table">
+<table class="table table-striped table-bordered table-hover"  >
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Image)
@@ -35,7 +36,11 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Image)
+            @if (!string.IsNullOrEmpty(item.Image))
+            {
+                <img src="@Url.Content(item.Image)" alt="Image" style="width:100px;height:150px;max-width: 100%; height: auto;" />
+            }
+
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Nombre)
@@ -53,9 +58,12 @@
             @Html.DisplayFor(modelItem => item.Observacion)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.producId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.producId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.producId })
+            <a class="btn btn-warning" href="/Productos/Edit/@item.producId">Edit<span class="glyphicon glyphicon-edit"></span></a>
+            <a class="btn btn-info" href="/Productos/Details/@item.producId">Details<span class="glyphicon glyphicon-exclamation-sign"></span></a>
+            <a class="btn btn-danger" href="/Productos/Delete/@item.producId">Delete<span class="glyphicon glyphicon-trash"></span></a>
+            @*@Html.ActionLink("Edit", "Edit", new { id=item.producId },new {@class="btn btn-warning" })
+            @Html.ActionLink("Details", "Details", new { id=item.producId }, new { @class = "btn btn-info" })
+            @Html.ActionLink("Delete", "Delete", new { id=item.producId }, new { @class = "btn btn-danger" })*@
         </td>
     </tr>
 }
