--- a/femcoservice/Views/Productos/Create.cshtml
+++ b/femcoservice/Views/Productos/Create.cshtml
@@ -43,10 +43,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UltimaCompra, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.UltimaCompra, new { htmlAttributes = new { @class = "form-control" } })
+                <div class='input-group date' id='datepicker' style="width:280px">
+                    @Html.EditorFor(model => model.UltimaCompra, new { htmlAttributes = new { @class = "form-control" } })
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
                 @Html.ValidationMessageFor(model => model.UltimaCompra, "", new { @class = "text-danger" })
             </div>
         </div>
+
 
 
         <div class="form-group">
@@ -80,4 +86,10 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+<script type="text/javascript">
+    $(function () {
+        $('#datepicker').datetimepicker({ format: 'YYYY/MM/DD' });
+    });
+</script>
+
 }
