--- a/femcoservice/Views/Productos/Delete.cshtml
+++ b/femcoservice/Views/Productos/Delete.cshtml
@@ -16,7 +16,10 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Image)
+            @if (!string.IsNullOrEmpty(Model.Image))
+            {
+                <img src="@Url.Content(Model.Image)" alt="Image" style="width:100px;height:150px;max-width: 100%; height: auto;" />
+            }
         </dd>
 
         <dt>
