--- a/femcoservice/Views/Productos/Edit.cshtml
+++ b/femcoservice/Views/Productos/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model femcoservice.Models.Producto
+﻿@model femcoservice.Models.ProductoView
 
 @{
     ViewBag.Title = "Edit";
@@ -7,23 +7,33 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Productos", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
         <h4>Producto</h4>
+        @if (!string.IsNullOrEmpty(Model.Image))
+        {
+            <img src="@Url.Content(Model.Image)" alt="Image" style="width:100px;height:150px;max-width: 100%; height: auto;" />
+        }
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.producId)
+        @Html.HiddenFor(model => model.Image)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+           
+                @Html.LabelFor(model => model.ImagenFile, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <span class="btn btn-default btn-file">
+                        @Html.TextBoxFor(modelo => modelo.ImagenFile, new { type = "file" })
+                    </span>
+                </div>
+            
+             
             </div>
-        </div>
+        
 
         <div class="form-group">
             @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -44,10 +54,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UltimaCompra, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.UltimaCompra, new { htmlAttributes = new { @class = "form-control" } })
+                <div class='input-group date' id='datepicker' style="width:280px">
+                    @Html.EditorFor(model => model.UltimaCompra, new { htmlAttributes = new { @class = "form-control" } })
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
                 @Html.ValidationMessageFor(model => model.UltimaCompra, "", new { @class = "text-danger" })
             </div>
         </div>
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -82,4 +98,10 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+<script type="text/javascript">
+    $(function () {
+        $('#datepicker').datetimepicker({ format: 'YYYY/MM/DD' });
+    });
+</script>
+
 }
