--- a/femcoservice/Views/Productos/Index.cshtml
+++ b/femcoservice/Views/Productos/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Productos</h2>
 
 <p>
    <a class="btn btn-primary" href="/Productos/Create">Create New<span class="glyphicon-plus"></span></a>
