--- a/femcoservice/Views/Productos/Edit.cshtml
+++ b/femcoservice/Views/Productos/Edit.cshtml
@@ -100,6 +100,8 @@
     @Scripts.Render("~/bundles/jqueryval")
 <script type="text/javascript">
     $(function () {
+        var dataFormated = moment($('#datepicker input').val(), 'DD/MM/YYYY').format('YYYY/MM/DD');
+        $('#datepicker input').val(dataFormated);
         $('#datepicker').datetimepicker({ format: 'YYYY/MM/DD' });
     });
 </script>
